# eve

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md
.build/: Dockerfile
.build/nginx/: default.conf  nginx.conf
.github/workflows/: ci.yml  release.yml
ai-node/: Cargo.toml
ai-node/cli/: Cargo.toml
ai-node/node/: Cargo.toml
bot/: Cargo.toml
bot/src/: args.rs  bot.rs  main.rs
cli/: Cargo.toml
cli/src/: display.rs  main.rs  profiles.rs  utils.rs
cli/src/args/: answer.rs  mod.rs  orch.rs  question.rs
cli/src/args/account/: airdrop.rs  balance.rs  create.rs  delete.rs  list.rs  mod.rs
cli/src/args/nodes/: create.rs  delete.rs  list.rs  mod.rs
crates/ai/: Cargo.toml
crates/ai/src/: error.rs  lib.rs  ollama.rs
crates/ai/tests/: limits.rs
crates/api/: Cargo.toml
crates/api/src/: account.rs  ai_models.rs  answer.rs  cluster.rs  history.rs  jwt_auth.rs  lib.rs  nodes.rs  query.rs  status.rs
crates/api/src/middleware/: limits.rs
crates/api_client/: Cargo.toml
crates/api_client/src/: lib.rs
crates/cli_utils/: Cargo.toml
crates/cli_utils/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: api.rs  base.rs  db.rs  lib.rs  llm.rs  logging.rs  node.rs  orch.rs  p2p.rs  rpc.rs  tasks.rs  url.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: hash.rs
crates/crypto/src/ed25519/: mod.rs  private.rs  public.rs  signature.rs
crates/events/: Cargo.toml
crates/events/src/: ai.rs  lib.rs  loader.rs  node.rs
crates/jwt/: Cargo.toml
crates/jwt/src/: lib.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs  metric_exporter.rs
crates/node/: Cargo.toml
crates/node/src/: error.rs  lib.rs  net.rs  task.rs
crates/node/tests/: node.rs  rt.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: error.rs  interface.rs  lib.rs  network.rs  orch.rs  verifier.rs
crates/orchestrator/src/store/: accounts.rs  mod.rs  queries.rs
crates/orchestrator/src/tasks/: env.rs  mod.rs  task.rs
crates/p2p/: Cargo.toml
crates/p2p/src/: behaviour.rs  error.rs  key.rs  lib.rs  swarm.rs  sys.rs  task.rs
crates/p2p/src/etp/: mod.rs  net.rs  nodes.rs  proto.rs  requests.rs
crates/p2p/tests/: common.rs  connect.rs  direct_send.rs
crates/storage/: Cargo.toml
crates/storage/src/: account.rs  cluster.rs  lib.rs  query.rs  sequence.rs
crates/storage/src/core/: db.rs  error.rs  iter.rs  mod.rs  table.rs  tx.rs
crates/storage/tests/: cluster.rs  common.rs  query.rs  sequence.rs
crates/types/: Cargo.toml
crates/types/src/: account.rs  cluster.rs  lib.rs  p2p.rs  percent.rs
crates/types/src/ai/: mod.rs  models.rs  query.rs  request.rs  response.rs  verification.rs
docs/: localnet.md
node/: Cargo.toml
node/src/: main.rs
node/src/args/: config.rs  init.rs  mod.rs  run.rs  test.rs
web-node/: Cargo.toml  Makefile  build.rs
web-node/src/: client.rs  env.rs  lib.rs  log.rs  results.rs  settings.rs
web-node/src/wonnx/: mod.rs  task.rs  worker.rs
web-node/view/: build.js  icons.html  index.html  package-lock.json  package.json  webpack.config.js
web-node/view/scripts/: ai.js  console.js  icons.js  index.js  lib.js  wasm.js  welcome.js
web-node/view/scripts/head/: ai.js  balance.js  index.js  network.js  settings.js  tabs.js  wonnx.status.js
web-node/view/scripts/llama/llama-mt/: llama.js  main-worker.js  main.js  main.wasm  utility.js
web-node/view/scripts/section/: mod.js
web-node/view/scripts/section/chat/: mod.js  proc.js  view.js
web-node/view/scripts/section/web-node/: control.js  mod.js  network.js  req-counter.js  tps.js  wonnx.status.js
web-node/view/scripts/transformers/: ort-wasm-simd-threaded.jsep.mjs  transformers.js  transformers.js.map  transformers.min.js  transformers.min.js.map  transformers.node.cjs  transformers.node.cjs.map  transformers.node.min.cjs  transformers.node.min.cjs.map  transformers.node.min.mjs  transformers.node.min.mjs.map  transformers.node.mjs  transformers.node.mjs.map  transformers.web.js  transformers.web.js.map  transformers.web.min.js  transformers.web.min.js.map
web-node/view/scripts/wonnx/: worker.js
web-node/view/styles/: console.css  dialog_settings.css  dialog_welcome.css  header.css  index.css  modal.css  reset.css  section.css
web-node/view/styles/section/: chat.css  mod.css
