[workspace.package]
edition = "2021"
license = "GPL-2.0-only"
version = "0.1.0"

[workspace]
members = [
  "bot",
  "cli",
  "crates/*",
  "node",
  "web-node",
]

resolver = "2"

[workspace.dependencies]
ai = {path = "crates/ai"}
cli_utils = {path = "crates/cli_utils"}
crypto = {path = "crates/crypto"}
events = {path = "crates/events"}
jwt = {path = "crates/jwt"}
metrics = {path = "crates/metrics"}
node = {path = "crates/node"}
node-config = {path = "crates/config"}
orchestrator = {path = "crates/orchestrator"}
orchestrator_api = {path = "crates/api"}
orchestrator_client = {path = "crates/api_client"}
p2p = {path = "crates/p2p"}
storage = {path = "crates/storage"}
types = {path = "crates/types"}

arc-swap = "1.7.1"
async-trait = "0.1"
backon = {version = "1.3", features = ["tokio-sleep"], default-features = false}
bincode = "1.3.3"
clap = "4.5.28"
color-eyre = "0.6"
curve25519-dalek = "2.1.0"
dashmap = "6.1"
ed25519-dalek = "2.1.1"
eyre = "0.6.5"
futures = "0.3.31"
headers = "0.4.0"
hex = "0.4"
home = "0.5.11"
http = "1"
jsonrpsee = "0.24"
jsonwebtoken = "9.3"
multiaddr = "0.18.2"
ollama-rs = {version = "0.2", features = ["stream"]}
opentelemetry = {version = "0.28", default-features = false, features = ["metrics"]}
opentelemetry_sdk = {version = "0.28", default-features = false, features = ["metrics"]}
poem = {version = "3.1.6", features = ["eyre06"]}
rand = "0.8.5"
ratelimit = "0.10"
reqwest = "0.12.12"
rocksdb = {version = "0.23.0", features = ["lz4"]}
serde = "1"
serde_json = "1.0.100"
serde_yaml = "0.8"
sha3 = "0.10.8"
tempdir = "0.3.7"
tempfile = "3.16.0"
termion = "4.0.3"
rustyline = "15.0.0"
thiserror = "1"
tokio = "1.43.0"
tower = "0.4"
tracing = "0.1"
tracing-loki = "0.2"
tracing-subscriber = "0.3"
tracing-test = "0.2.5"
url = "2.5.4"

libp2p = {git = "https://github.com/libp2p/rust-libp2p.git", branch = "master"}
libp2p-webrtc = {git = "https://github.com/libp2p/rust-libp2p.git", branch = "master"}
libp2p-webrtc-websys = {git = "https://github.com/libp2p/rust-libp2p.git", branch = "master"}

#wasm dependencies
async_wasm_task = "0.2.3"
js-sys = "0.3.69"
serde-wasm-bindgen = "0.6.5"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.42"
web-sys = "0.3"

[workspace.lints.clippy]
branches_sharing_code = "warn"
clear_with_drain = "warn"
dbg_macro = "warn"
derive_partial_eq_without_eq = "warn"
empty_line_after_outer_attr = "warn"
equatable_if_let = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_with_drain = "warn"
large_stack_frames = "warn"
manual_clamp = "warn"
mutex_integer = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
uninhabited_references = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
useless_let_if_seq = "warn"
