[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace]
members = ["cli", "node"]

resolver = "2"

[workspace.dependencies]
eyre = "0.6.5"
color-eyre = "0.6"
tokio = "1.43.0"
futures = "0.3.31"
libp2p = "0.55.0"
thiserror = "1"
tracing = "0.1"
tracing-loki = "0.2"
tracing-subscriber = "0.3"

