[package]
name = "crypto"

edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
curve25519-dalek.workspace = true
ed25519-dalek = {workspace = true, features = ["rand_core"]}
eyre.workspace = true
hex.workspace = true
rand.workspace = true
serde = {workspace = true, features = ["derive"]}
sha3.workspace = true
bincode.workspace = true

[dev-dependencies]
bincode.workspace = true
serde_json.workspace = true

[lints]
workspace = true
