[package]
edition.workspace = true
license.workspace = true
name = "events"
version.workspace = true

[dependencies]
eyre.workspace = true
serde.workspace = true
tracing.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = {workspace = true, features = ["Window", "CustomEvent"]}
serde-wasm-bindgen.workspace = true

[lints]
workspace = true
