[package]
name = "node"

edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
ai.workspace = true
crypto.workspace = true
node-config.workspace = true
p2p.workspace = true
types.workspace = true
events.workspace = true

futures.workspace = true
eyre.workspace = true
rand.workspace = true
thiserror.workspace = true
tracing.workspace = true
multiaddr.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = {workspace = true, features = ["sync", "rt", "time", "macros", "signal"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true
js-sys.workspace = true

[dev-dependencies]
tempdir.workspace = true

[lints]
workspace = true
